--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-  </head>
-  <body>
-    <div id=main></div>
-    <script async defer src=/bundle.js></script>    
-  </body>
-</html> 
+
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Allan:bold' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link href="/bootstrap.min.css" rel="stylesheet">
+  <link href="/simple-sidebar.css" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id=main></div>
+  <script async defer src=/bundle.js></script>
+</body>
+
+</html>
